// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FirstStepsApp > should match snapshot 1`] = `
<h1
  data-testid="test-h1"
>
  Carrito de compras
</h1>
`;

exports[`FirstStepsApp > should match snapshot with container 1`] = `
<div>
  <h1
    data-testid="test-h1"
  >
    Carrito de compras
  </h1>
  <div
    data-testid="ItemCounter"
    quantity="1"
  />
  <div
    data-testid="ItemCounter"
    quantity="5"
  />
  <div
    data-testid="ItemCounter"
    quantity="1"
  />
  <div
    data-testid="ItemCounter"
    quantity="3"
  />
</div>
`;
